objects/Stratics_Logs__c.object
<CustomObject>
    <description>Stratics Logs</description>
    <fields>
        <fullName>Is_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Success</description>
        <inlineHelpText>Is Success</inlineHelpText>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead</description>
        <inlineHelpText>Lead</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Stratics Logs</relationshipLabel>
        <relationshipName>Stratics_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Sent__c</fullName>
        <description>Request Sent</description>
        <inlineHelpText>Request Sent</inlineHelpText>
        <label>Request Sent</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <description>Response Message</description>
        <inlineHelpText>Response Message</inlineHelpText>
        <label>Response Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Stratics Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Lead__c</columns>
        <columns>Is_Success__c</columns>
        <columns>Request_Sent__c</columns>
        <columns>Response_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>hi</language>
    </listViews>
    <nameField>
        <label>Stratics Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stratics Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>